version 1.1-beta2 xx - 2011
. [NEW] v2.0 forward ported changes:
			LabelBMFont: added setFntFile method
			Animation: Added new animation format that supports delays per frame and notifications per frame
. [NEW] All: Code is compatible with ARC (issue #1199)
. [NEW] Node: Added onExitTransitionDidStart (issue #792)
. [NEW] ParticleSystem: supports animations in new animation format 
. [NEW] TileMap: supports in-memory TMX map creation (issue #1239)
. [NEW] TileMap: Flipped tiles can be changed during runtime (issue #1264)
. [FIX] ColorLayer: incorrect size in init method
. [FIX] Denshion: Background music fades ok (issue #1304)
. [FIX] EAGLView: always destroy and recreate OpenGL buffers completely (issue #1254) 
. [FIX] MenuItem: removed warning when deleting item
. [FIX] Node: orderOfArrival is @synthezied correctly (issue #1273)
. [FIX] Node & Sprite: Scale before Skew to prevent issues with negatives scales.
. [FIX] ParticleSystem: prevent bursts of particles due to too high emitCounter (issue #1201)
. [FIX] ParticleBatchNode: removeChild error and 'freezing' particles (issue #1316)
. [FIX] ParticleBatchNode: memoryleak (issue #1306)
. [FIX] Sprite: fixed possible setColor and opacity
. [FIX] Sprite: fixed adding premade sprite hierarchy to batchnode (issue #1217)
. [FIX] TileMap: Fixed a problem with multiple layers and multiple tile sets that could cause TMX maps to not load if rotation is used (issue #1302)
. [FIX] TouchDispatcher: correctly handles addition and removal of handlers when being inside a touch handler (issue #1084, #1139)
. [FIX-MAC] LabelTTF: word wrap works on Mac (issue #1074)

version 1.1-beta 11-Oct-2011
. [NEW] Animation: Added file format. AnimationCache can load animations from file
. [NEW] ccConfig: Removed CC_RETINA_DISPLAY_FILENAME_SUFFIX. Use CCFileUtils API instead
. [NEW] ccConfig: Removed CC_RETINA_DISPLAY_SUPPORT. It is always enabled.