@@ -159,4 +159,6 @@
 {}
 @end
 
-
+@interface ActionTargeted : ActionDemo
+{}
+@end
